--- a/ClientDash/src/App.css
+++ b/ClientDash/src/App.css
@@ -12,13 +12,17 @@
   transition: background-color 0.2s ease, padding-left 0.2s ease;
 }
 
-.sidebar-dropdown .nav-link:hover {
+/* .sidebar-dropdown .nav-link:hover {
   background-color: rgb(246, 246, 246);
-  padding-left: 1.25rem;
   color: black !important;
-}
+} */
 
 .sidebar-dropdown .nav-link.active {
   background-color: rgb(245, 244, 244);
   font-weight: bold;
+}
+.nav-link:hover {
+  background-color: rgb(246, 246, 246);
+border-radius: 10px !important;
+  color: black !important;
 }
