create notice Board

--- a/ClientDash/src/App.css
+++ b/ClientDash/src/App.css
@@ -9,13 +9,15 @@
 /*AdminSideNavbar*/
 .sidebar-dropdown .nav-link {
   border-radius: 8px;
+  font-size: 13px;
+   border-bottom: 1px solid wheat !important ;
   transition: background-color 0.2s ease, padding-left 0.2s ease;
 }
+.sidebar-dropdow{
+   font-size: 13px !important;
+  
+}
 
-/* .sidebar-dropdown .nav-link:hover {
-  background-color: rgb(246, 246, 246);
-  color: black !important;
-} */
 
 .sidebar-dropdown .nav-link.active {
   background-color: rgb(245, 244, 244);
